--- a/pom.xml
+++ b/pom.xml
@@ -50,19 +50,20 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.16</version>
+			<version>1.18.20</version>
 		</dependency>
 
 	</dependencies>
 
 	<build>
-
 		<resources>
 			<resource>
 				<directory>src/main/java</directory>
 				<includes>
+					<include>**/*.properties</include>
 					<include>**/*.xml</include>
 				</includes>
+				<filtering>false</filtering>
 			</resource>
 		</resources>
 		<plugins>
