--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,4 +10,4 @@ log4j.appender.A.layout = org.apache.log4j.PatternLayout
 log4j.appender.A.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
 log4j.appender.A.encoding=UTF-8
 
-log4j.rootLogger=DEBUG,Console,A
+log4j.rootLogger=ALL,Console,A
